# claude-to-sqlite

./: README.md  pyproject.toml
.github/workflows/: test.yml
claude_to_sqlite/: cli.py
tests/: artifacts.json  example.json  test_claude_to_sqlite.py
